[package]
name = "tangleproof"
version = "0.1.0"
authors = ["Thoralf-M <thoralf.mue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = {git = "https://github.com/iotaledger/iota.rs", default-features = false, rev = "be869fc47117f996cf040c8466ba4023d70cacfa", features = ["async"]}
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "acab07e4bcff947c70cde312789a2ef2977c652b" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# For main.rs
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"