[package]
name = "tangleproof"
version = "0.1.0"
authors = ["Thoralf-M <thoralf.mue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = {git = "https://github.com/iotaledger/iota.rs", rev = "eda30070a820cee336395a84957e29f0642ceaff" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# For main.rs
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"