[package]
name = "tangleproof"
version = "0.1.0"
authors = ["Thoralf-M <thoralf.mue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = {git = "https://github.com/iotaledger/iota.rs", rev = "a9351b4eaa2db56f651fb4a45cf7c0afa3f74c5b", features = ["mqtt"] }
# iota-client = { path = "../iota.rs/iota-client"}
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
warp = "0.3.1"
# For main.rs
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
rocksdb = { git="https://github.com/iotaledger/rust-rocksdb", rev = "70f2a53529ecc1853a2c025cec7f9d00bd50352c", default-features = false, features = ["lz4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"]}

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }